--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@
 buildscript {
     ext {
         kotlin_version = '1.3.50'
-        gradle_version = '3.5.0'
+        gradle_version = '3.5.1'
 
         multidex_version = '2.0.1'
         appcompat_version = '1.1.0'
@@ -19,6 +19,8 @@ buildscript {
         glide_version = '4.9.0'
         timber_version = '4.7.1'
         coroutines_version = '1.3.1'
+        cache_version = '2.0.2'
+        apache_commons_version = '3.9'
         navigation_version = '2.1.0'
 
         test_junit_version = '4.12'
