--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,8 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".ui.SplashActivity"
-            android:theme="@style/SplashTheme">
+            android:name=".ui.base.ApplicationActivity"
+            android:theme="@style/AppTheme">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,10 +25,6 @@
             </intent-filter>
 
         </activity>
-
-        <activity
-            android:name=".ui.ApplicationActivity"
-            android:theme="@style/AppTheme" />
 
     </application>
 
