--- a/build.gradle
+++ b/build.gradle
@@ -2,26 +2,28 @@
 
 buildscript {
     ext {
-        kotlin_version = '1.3.50'
-        gradle_version = '3.5.1'
+        kotlin_version = '1.3.71'
+        gradle_version = '3.6.2'
 
         multidex_version = '2.0.1'
-        appcompat_version = '1.1.0'
-        material_version = '1.0.0'
+        ui_core_version = '1.2.0'
+        ui_appcompat_version = '1.1.0'
         arch_version = '1.1.1'
-        lificycle_version = '2.1.0'
+        lificycle_version = '2.2.0'
         retrofit_version = '2.6.1'
-        room_version = '2.2.0-rc01'
+        room_version = '2.2.5'
         logging_interceptor_version = '4.2.0'
-        constraint_version = '2.0.0-beta2'
-        material_version = '1.0.0'
+        constraint_version = '2.0.0-beta4'
+        material_version = '1.1.0'
         koin_version = '2.0.1'
-        glide_version = '4.9.0'
+        glide_version = '4.11.0'
         timber_version = '4.7.1'
         coroutines_version = '1.3.1'
         cache_version = '2.0.2'
         apache_commons_version = '3.9'
-        navigation_version = '2.1.0'
+        apache_commons_io_version = '2.6'
+        navigation_version = '2.2.1'
+        photo_preview_version = '2.0.0'
 
         test_junit_version = '4.12'
         test_runner_version = '1.2.0'
@@ -31,13 +33,13 @@ buildscript {
     repositories {
         google()
         jcenter()
+        mavenCentral()
     }
 
     dependencies {
         classpath "com.android.tools.build:gradle:$gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
     }
 }
 
@@ -45,6 +47,8 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
 }
 
