--- a/build.gradle
+++ b/build.gradle
@@ -2,38 +2,41 @@
 
 buildscript {
     ext {
-        kotlin_version = '1.3.71'
-        gradle_version = '3.6.2'
+        kotlin_version = '1.6.10'
+        gradle_version = '7.0.4'
 
         multidex_version = '2.0.1'
-        ui_core_version = '1.2.0'
-        ui_appcompat_version = '1.1.0'
+        ui_core_version = '1.7.0'
+        ui_appcompat_version = '1.4.1'
         arch_version = '1.1.1'
-        lificycle_version = '2.2.0'
+        lifecycle_version = '2.4.0'
+        lifecycle_ext_version = '2.2.0'
         retrofit_version = '2.6.1'
-        room_version = '2.2.5'
+        room_version = '2.4.1'
         logging_interceptor_version = '4.2.0'
-        constraint_version = '2.0.0-beta4'
-        material_version = '1.1.0'
+        constraint_version = '2.1.3'
+        material_version = '1.5.0'
         koin_version = '2.0.1'
         glide_version = '4.11.0'
         timber_version = '4.7.1'
-        coroutines_version = '1.3.1'
+        coroutines_version = '1.6.0'
         cache_version = '2.0.2'
         apache_commons_version = '3.9'
         apache_commons_io_version = '2.6'
-        navigation_version = '2.2.1'
+        navigation_version = '2.3.5'
         photo_preview_version = '2.0.0'
 
-        test_junit_version = '4.12'
-        test_runner_version = '1.2.0'
-        test_espresso_version = '3.1.0'
+        test_junit_version = '4.13.2'
+        test_runner_version = '1.4.0'
+        test_espresso_version = '3.4.0'
     }
 
     repositories {
         google()
-        jcenter()
+        mavenLocal()
+        gradlePluginPortal()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
 
     dependencies {
@@ -46,7 +49,8 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenLocal()
+        gradlePluginPortal()
         mavenCentral()
         maven { url 'https://jitpack.io' }
     }
